Implemented Connection API
