# connectorservice/src/main/java/com/kienast/connectorservice/dto/ConnectionStoreAdapter.java
@@ -1,0 +1,21 @@
+package com.kienast.connectorservice.dto;
+
+import com.kienast.connectorservice.model.ConnectionStore;
+import com.kienast.connectorservice.rest.api.model.ConnectionStoreModel;
+
+public class ConnectionStoreAdapter {
+
+	private ConnectionStore connectionStore;
+
+	public ConnectionStoreAdapter(ConnectionStore connectionStore) {
+		this.connectionStore = connectionStore;
+	}
+
+	public ConnectionStoreModel createJson() {
+		return new ConnectionStoreModel()
+				.hostname(connectionStore.getHostname())
+				.port(connectionStore.getPort())
+				.username(connectionStore.getUsername())
+				.password(connectionStore.getPassword());
+	}
+}
